--- a/env/includes/engine_locations.yml
+++ b/env/includes/engine_locations.yml
@@ -78,3 +78,9 @@ engines.tk-vred.location:
   type: app_store
   name: tk-vred
   version: v2.1.5
+engines.tk-unreal.location:
+  version: v1.2.0
+  type: github_release
+  organization: ue4plugins
+  repository: tk-unreal
+
