--- a/env/includes/frameworks.yml
+++ b/env/includes/frameworks.yml
@@ -69,4 +69,11 @@ frameworks:
     location:
       version: v0.2.2
       type: app_store
-      name: tk-framework-lmv
+      name: tk-framework-lmv    
+  tk-framework-unrealqt_v1.x.x:
+    location:
+      version: v1.2.3
+      type: github_release
+      organization: ue4plugins
+      repository: tk-framework-unrealqt
+    
