tk-download git repo 테스트

--- a/env/includes/app_locations.yml
+++ b/env/includes/app_locations.yml
@@ -141,3 +141,9 @@ apps.tk-mari-projectmanager.location:
   type: app_store
   version: v1.3.1
 frameworks: '@frameworks'
+
+
+apps.tk-download.location:
+  name: tk-download
+  type: git
+  path: https://github.com/onetera/tk-config-remote_ww.git
