--- a/env/includes/settings/tk-desktop2.yml
+++ b/env/includes/settings/tk-desktop2.yml
@@ -25,6 +25,7 @@ settings.tk-desktop2.site:
   location: "@engines.tk-desktop2.location"
 
 
+
 # project
 settings.tk-desktop2.all:
   apps:
@@ -33,4 +34,6 @@ settings.tk-desktop2.all:
     tk-multi-launchmari: "@settings.tk-multi-launchapp.mari"
     tk-multi-launchmotionbuilder: "@settings.tk-multi-launchapp.motionbuilder"
     tk-multi-publish2: "@settings.tk-multi-publish2.standalone"
+    tk-download: "@settings.tk-download.standalone"
   location: "@engines.tk-desktop2.location"
+
