--- a/env/includes/settings/tk-download.yml
+++ b/env/includes/settings/tk-download.yml
@@ -19,7 +19,7 @@
 #tk-download
 settings.tk-download.standalone:
   location:
-    name: tk-download
+    #name: tk-download
     type: git
     path: https://github.com/onetera/tk-download.git
     version: v1.0.0
