--- a/env/includes/settings/tk-multi-publish2.yml
+++ b/env/includes/settings/tk-multi-publish2.yml
@@ -238,6 +238,10 @@ settings.tk-multi-publish2.nuke.asset_step:
     hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/nuke_publish_script.py"
     settings:
         Publish Template: nuke_asset_publish
+  - name: (To west) Publish to Shotgun
+    hook: "{self}/publish_file.py:{config}/tk-multi-publish2/nuke/basic/nuke_publish_script.py"
+    settings:
+        Publish Template: nuke_asset_publish_to_west
   - name: Submit for Review
     hook: "{engine}/tk-multi-publish2/basic/submit_for_review.py"
     settings: {}
@@ -263,6 +267,10 @@ settings.tk-multi-publish2.nuke.shot_step:
     hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/nuke_publish_script.py"
     settings:
         Publish Template: nuke_shot_publish
+  - name: (To west) Publish to Shotgun
+    hook: "{self}/publish_file.py:{config}/tk-multi-publish2/nuke/basic/nuke_publish_script.py"
+    settings:
+        Publish Template: nuke_shot_publish_to_west
   - name: Submit for Review
     hook: "{engine}/tk-multi-publish2/basic/submit_for_review.py"
     settings: {}
