--- a/env/includes/app_locations.yml
+++ b/env/includes/app_locations.yml
@@ -76,10 +76,10 @@ apps.tk-multi-snapshot.location:
   type: app_store
   name: tk-multi-snapshot
   version: v0.9.1
-apps.tk-multi-workfiles2.location:
-  type: app_store
-  name: tk-multi-workfiles2
-  version: v0.13.4
+#apps.tk-multi-workfiles2.location:
+#  type: app_store
+#  name: tk-multi-workfiles2
+#  version: v0.13.4
 apps.tk-multi-devutils.location:
   type: app_store
   name: tk-multi-devutils
@@ -148,5 +148,9 @@ apps.tk-download.location:
   type: git
   path: https://github.com/onetera/tk-download.git
 
-
+apps.tk-multi-workfiles2.location:
+  type: git
+  name: tk-multi-workfiles2
+  path: https://github.com/onetera/tk-multi-workfiles2.git
+  version: v0.11.15
 
