--- a/env/includes/settings/tk-multi-workfiles2.yml
+++ b/env/includes/settings/tk-multi-workfiles2.yml
@@ -288,6 +288,11 @@ settings.tk-multi-workfiles2.maya.shot_step:
 ################################################################################
 
 # ---- nuke
+# project
+settings.tk-multi-workfiles2.nuke.project:
+  hook_scene_operation: "{config}/tk-multi-workfiles2/scene_operation_tk-nuke.py"
+  location: "@apps.tk-multi-workfiles2.location"
+
 
 # asset_step
 settings.tk-multi-workfiles2.nuke.asset_step:
