--- a/env/includes/settings/tk-desktop2.yml
+++ b/env/includes/settings/tk-desktop2.yml
@@ -17,6 +17,7 @@ includes:
 - ./tk-multi-launchapp.yml
 - ./tk-multi-publish2.yml
 - ./tk-download.yml
+- ./tk-desktop-timecard.yml
 
 ################################################################################
 
@@ -36,5 +37,6 @@ settings.tk-desktop2.all:
     tk-multi-launchmotionbuilder: "@settings.tk-multi-launchapp.motionbuilder"
     tk-multi-publish2: "@settings.tk-multi-publish2.standalone"
     tk-download: "@settings.tk-download.standalone"
+    tk-desktop-timecard: "@settings.tk-desktop-timecard.standalone"
   location: "@engines.tk-desktop2.location"
 
