--- a/env/includes/settings/tk-desktop.yml
+++ b/env/includes/settings/tk-desktop.yml
@@ -41,7 +41,7 @@ settings.tk-desktop.project:
     tk-multi-launchmotionbuilder: "@settings.tk-multi-launchapp.motionbuilder"
     tk-multi-publish2: "@settings.tk-multi-publish2.standalone"
     tk-multi-screeningroom: "@settings.tk-multi-screeningroom.rv"
-    tk-download: "@settings.tk-download.standalone"
+    tk-iomanager: "@settings.tk-iomanager.standalone"
     tk-desktop-timecard: "@settings.tk-desktop-timecard.standalone"
   groups:
   - matches:
