--- a/env/includes/app_locations.yml
+++ b/env/includes/app_locations.yml
@@ -172,8 +172,10 @@ apps.tk-mari-projectmanager.location:
   version: v1.3.1
 frameworks: '@frameworks'
 
-apps.tk-iomanager.location:
-  name: tk-iomanager
-  type: dev
-  linux_path: /westworld/inhouse/tool/shotgun/application/tk-iomanager
-  windows_path: \\10.0.40.42\inhouse\tool\shotgun\application\tk-iomanager
+apps.tk-iomanager.location: '@apps.tk-iomanager.location'
+apps.tk-desktop-timecard.location: '@apps.tk-desktop-timecard.location'
+apps.tk-multi-workfiles2.location: '@apps.tk-multi-workfiles2.location'
+apps.tk-multi-snapshot.location: '@apps.tk-multi-snapshot.location'
+################################################################################
+# reference all of the common frameworks
+frameworks: '@frameworks'
