--- a/env/includes/app_locations.yml
+++ b/env/includes/app_locations.yml
@@ -91,15 +91,15 @@ apps.tk-multi-shotgunpanel.location:
 #  name: tk-multi-snapshot
 #  version: v0.9.1
 
-apps.tk-multi-workfiles2.location:
-  type: app_store
-  name: tk-multi-workfiles2
-  version: v0.13.4
+#apps.tk-multi-workfiles2.location:
+  #type: app_store
+  # name: tk-multi-workfiles2
+  #version: v0.13.4
 
-#apps.tk-multi-devutils.location:
-#  type: app_store
-#  name: tk-multi-devutils
-#  version: v1.2.1
+apps.tk-multi-devutils.location:
+  type: app_store
+  name: tk-multi-devutils
+  version: v1.2.1
 
 apps.tk-multi-bg-publish.location:
   type: app_store
