--- a/core/roots.yml
+++ b/core/roots.yml
@@ -5,8 +5,7 @@
 primary:
   default: true
   linux_path: /show
-  mac_path: /show
-  shotgun_storage_id: 236
-  windows_path: C:\show
-
+  mac_path: null
+  shotgun_storage_id: 3
+  windows_path: \\10.0.40.42\show
 # End of file.
